--- a/app/src/main/res/layout/bluetooth_activity_main.xml
+++ b/app/src/main/res/layout/bluetooth_activity_main.xml
@@ -20,6 +20,12 @@
         android:textColor="@color/cardview_dark_background"
         android:layout_gravity="center"/>
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/lvBluetooth"
+        android:layout_weight="1"/>
+
     <Button
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
