--- a/app/src/main/res/layout/activity_additional_info.xml
+++ b/app/src/main/res/layout/activity_additional_info.xml
@@ -33,15 +33,20 @@
             android:textSize="20sp" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/btEndCollect"
-        android:layout_width="200dp"
-        android:layout_height="60dp"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fabEndCollect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        app:backgroundTint="@color/colorPrimary"
+        app:srcCompat="@drawable/complete_collect"
+        android:layout_margin="@dimen/fab_margin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
-        app:layout_constraintVertical_bias="0.857" />
+        app:layout_constraintVertical_bias="1.0"/>
+
 
 </android.support.constraint.ConstraintLayout>
