--- a/app/src/main/res/layout/collect_list_item.xml
+++ b/app/src/main/res/layout/collect_list_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,18 +15,23 @@
             android:id="@+id/tvLat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:textColor="#000000"
             android:text="Latitude"
             android:textSize="30sp"
-            android:layout_weight="4"/>
+            android:layout_weight="4"
+            android:maxLines="1"
+            android:maxLength="5" />
 
         <TextView
             android:id="@+id/tvLong"
             android:layout_width="0dp"
             android:layout_height="40dp"
-
+            android:textColor="#000000"
             android:text="Longitude"
             android:textSize="30sp"
-            android:layout_weight="4"/>
+            android:layout_weight="4"
+            android:maxLines="1"
+            android:maxLength="5" />
 
         <ImageView
             android:id="@+id/tvSatus"
@@ -33,7 +39,8 @@
             android:layout_height="match_parent"
             android:textSize="30sp"
             android:layout_weight="2"
-            android:src="@drawable/wrong_icon"/>
+            android:src="@drawable/wrong_icon"
+            />
 
     </LinearLayout>
 
@@ -47,7 +54,8 @@
             android:id="@+id/ivAlgaeList"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            app:srcCompat="@mipmap/ic_launcher" />
+            app:srcCompat="@mipmap/ic_launcher"
+            android:paddingRight="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,22 +68,29 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="Data"
+                android:textColor="#000000"
                 android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/tvTemp"
                 android:layout_width="match_parent"
+                android:textColor="#000000"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="Temperatura"
-                android:textSize="30sp" />
+                android:textSize="30sp"
+                android:maxLines="1"
+                android:maxLength="3" />
 
             <TextView
                 android:id="@+id/tvSal"
                 android:layout_width="match_parent"
+                android:textColor="#000000"
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:text="Salinidade"
+                android:maxLines="1"
+                android:maxLength="3"
                 android:textSize="30sp" />
 
         </LinearLayout>
